<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundgradient1"
    android:orientation="vertical"
    android:padding="15dp"

    >

    <TextView
        android:id="@+id/activity_filter"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:text="Hybrid Filter"
        android:textColor="#ffff"
        android:alpha="0.8"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="sans" />


    <LinearLayout


        android:layout_width="match_parent"
        android:layout_height="300dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:src="@drawable/atomlogo2"
            android:background="@drawable/backgroundgradient1"
            android:alpha="0.8"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_filter"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:weightSum="1">


        <TextView
            android:id="@+id/start_date"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:textColor="#ffff"
            android:alpha="0.8"
            android:text="@string/FromDate"
            android:textSize="18sp"
            android:typeface="sans"
            android:layout_weight="1"/>


        <EditText

            android:id="@+id/input_start_date"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:hint="@string/Date"
            android:gravity="center"
            android:typeface="sans" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_filter"
        android:orientation="horizontal"
        android:weightSum="1">


        <TextView
            android:id="@+id/end_date"
            android:layout_weight="1"
            android:layout_width="156dp"
            android:textColor="#ffff"
            android:alpha="0.8"
            android:layout_height="wrap_content"
            android:text="@string/ToDate"
            android:textSize="18sp"
            android:typeface="sans" />


        <EditText

            android:id="@+id/input_end_date"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/Date"
            android:typeface="sans" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_filter"
        android:orientation="horizontal"
        android:weightSum="1">


        <TextView
            android:id="@+id/select_activity"
            android:layout_weight="1"
            android:layout_width="156dp"
            android:textColor="#ffff"
            android:alpha="0.8"
            android:layout_height="wrap_content"
            android:text="@string/FilterActivity"
            android:textSize="18sp"
            android:typeface="sans" />


        <EditText

            android:id="@+id/input_activity"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/activity"
            android:typeface="sans" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">


        <TextView
            android:id="@+id/select_category"
            android:layout_weight="1"
            android:layout_width="156dp"
            android:textColor="#ffff"
            android:alpha="0.8"
            android:layout_height="wrap_content"
            android:text="@string/FilterCategory"
            android:textSize="18sp"
            android:typeface="sans" />


        <EditText

            android:id="@+id/input_category"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            android:gravity="center"
            android:typeface="sans" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:weightSum="1">

        <Button
            android:id="@+id/Continue_Profile"
            android:layout_width="172dp"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:alpha="0.7"
            android:background="@drawable/custombutton1"
            android:gravity="center"
            android:padding="10dp"
            android:text="Continue"
            android:textColor="#FFFF"
            android:textStyle="bold" />


    </RelativeLayout>


</LinearLayout>