<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/backgroundgradient1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:padding="5dp">
    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_marginTop="30dp"
        cardview:cardBackgroundColor="#602B608A"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        cardview:cardElevation="10dp"
        cardview:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <!--<ImageView-->
            <!--android:id="@+id/imageView1"-->
            <!--android:src="@drawable/atomlogo2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="200dp"-->
            <!--android:scaleType="fitCenter" />-->

            <TextView
                android:id="@+id/About"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:maxLines="7"
                android:padding="10dp"
                android:text="@string/AboutUs"
                android:textAlignment="textStart"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#EBE7FC"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Team"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/team"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#EBE7FC"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/Bloglink"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/blog"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#EBE7FC"
                android:textSize="18sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>